Fix horizontal Scroll bug

--- a/styles.scss
+++ b/styles.scss
@@ -10,20 +10,15 @@ $secondary: #FA5959;
 
 .nav-item {
     width: 110px;
-    font-size: large;
+    font-size: medium;
 }
 
 .mid-row {
-    margin-top: 200px;
+    margin-top: 100px;
 
 }
 
-// @media (max-width: 992px){
-//     .mid-row {
-//         justify-content: center;
-//         text-align: center;
-//     }
-// }
+
 
 
 .texto-grueso {
@@ -41,9 +36,7 @@ $secondary: #FA5959;
     margin-top: 35px;
 }
 
-.inner-text {
-    margin-right: 100px;
-}
+
 
 .mid-btn {
     width: 170px;
@@ -57,6 +50,7 @@ $secondary: #FA5959;
     padding: 100px;
     border-radius: 120px;
     z-index: -1;
+    height: 20px; /* Altura de la barra */
 
 }
 
@@ -74,8 +68,10 @@ $secondary: #FA5959;
     display: inline-flex;
 }
 
-.margin-left {
-    margin-left: 30px;
+@media (min-width: 992px) {
+    .margin-left {
+        margin-left: 40px;
+    }
 }
 
 .img-main {
@@ -98,3 +94,25 @@ $secondary: #FA5959;
 .custom-height-3 {
     margin-top: 60px;
 }
+
+
+@media (max-width: 576px){
+    .center-small {
+        text-align: center;
+    }
+}
+
+
+@media (max-width: 576px){
+    .custom-margin-top {
+        margin-top: 40px;
+    }
+}
+
+@media (min-width: 992px) {
+    .custom-width {
+        width: 50%;
+    }
+}
+
+
